# DIGGA

./: .gitignore  CMakeLists.txt  README.md  analyze_digga_results.py  global_settings.json  run_digga_parallel.py
cmake/: DIGGAConfig.cmake.in
include/specfit/: AkimaSpline.hpp  BoundedLMSolver.hpp  BoundedModelFunctor.hpp  Chi2Utils.hpp  CommonTypes.hpp  ContinuumModel.hpp  ContinuumUtils.hpp  DiggaAPI.cpp  DiggaAPI.hpp  FitParameters.hpp  JsonUtils.hpp  ModelGrid.hpp  MultiDatasetCost.hpp  NyquistGrid.hpp  Observation.hpp  ParameterIndexer.hpp  ParameterManager.hpp  Powell.hpp  Rebin.hpp  ReportUtils.hpp  Resolution.hpp  RotationalConvolution.hpp  SNRHelpers.hpp  SimpleLM.hpp  Spectrum.hpp  SpectrumCache.hpp  SpectrumCache.hpp.orig  SpectrumCache.hpp.rej  SpectrumLoaders.hpp  SyntheticModel.hpp  ThreadPool.hpp  Types.hpp  UnifiedFitWorkflow.hpp
input/: 1444243093276400000.json  test_star.json  test_star_ignore.json  test_star_multifile.json
src/: AkimaSpline.cpp  Chi2Utils.cpp  ContinuumModel.cpp  ContinuumUtils.cpp  DIGGA_multiplot.py  DiggaAPI.cpp  DiggaAPI_json.cpp  FitParameters.cpp  GetChisq.cpp  JsonUtils.cpp  ModelGrid.cpp  MultiDatasetCost.cpp  NyquistGrid.cpp  Observation.cpp  Rebin.cpp  ReportUtils.cpp  Resolution.cpp  ResolutionCUDA.cu  RotationalConvolution.cpp  SNRHelpers.cpp  Spectrum.cpp  SpectrumCache.cpp  SpectrumLoaders.cpp  SyntheticModel.cpp  ThreadPool.cpp  UnifiedFitWorkflow.cpp  analyze_digga_results.py  main.cpp  mock_data_generator.cpp  run_digga_parallel.py  specfit_multiplot.py
